# watchTower

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  mcp_watchtower_high_level_design.md  mcp_watchtower_phase_plan.md  mcp_watchtower_research_and_stack.md  mkdocs.yml  pyproject.toml  watchtower.policy.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: analysis.md  architecture.md  event_model.md  improvement_plan.md  index.md  integration.md  policies.md  quickstart.md  sqlite_schema.md  ui_design_plan.md
docs/integrations/: claude-desktop.md  cline.md  cursor.md  openai-agents-sdk.md
examples/basic_mcp_client_demo/: main.py
examples/mcp_sdk_filesystem/: main.py
examples/safety_wrapper_demo/: main.py
mcp_watchtower/: __init__.py  bus.py  cli.py  emitter.py  events.py  fake_runner.py  health.py  mcp_wrapper.py  redaction.py  safety.py  server.py  storage.py  watchtower.py  webhooks.py
mcp_watchtower/adapters/: __init__.py  mcp_sdk.py
mcp_watchtower/exporters/: __init__.py  langfuse.py  langsmith.py  otel.py
real-test/: README.md  run_watchtower_test.py  toy_mcp_server.py
scripts/: real_use_case_repo_audit.py  smoke_e2e.py  smoke_gmail_use_case.py
sdk-ts/: package.json
sdk-ts/src/: index.ts
tests/: test_events_storage.py  test_fake_runner.py  test_health.py  test_mcp_wrapper.py  test_safety.py  test_server_api.py
web/: index.html  package-lock.json  package.json  playwright.config.ts
web/src/: App.tsx  styles.css  types.ts
web/src/components/: AgentRouteMap.tsx  EmptyState.tsx  EventTimeline.tsx  Header.tsx  HealthPanel.tsx  InspectorPanel.tsx  MetricCard.tsx  PendingBanner.tsx  ReliabilityPanel.tsx  RunHero.tsx  SideNav.tsx  StatusBadge.tsx
web/src/lib/: api.ts  eventUtils.ts  runNarrative.ts
web/src/pages/: ApprovalsPage.tsx  MissionControlPage.tsx  PoliciesPage.tsx  RunsPage.tsx  ServersPage.tsx  SettingsPage.tsx
web/tests/: watchtower.spec.ts
