[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-watchtower"
version = "0.1.0"
description = "Local-first live execution cockpit for MCP-powered agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "MCP Watchtower Contributors" }]
keywords = ["mcp", "agents", "observability", "sqlite", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/mcp-watchtower/mcp-watchtower"
Documentation = "https://github.com/mcp-watchtower/mcp-watchtower/tree/main/docs"
Issues = "https://github.com/mcp-watchtower/mcp-watchtower/issues"

[project.optional-dependencies]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-watchtower = "mcp_watchtower.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_watchtower*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
