[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-watchtower"
version = "0.1.0"
description = "Local-first live execution cockpit for MCP-powered agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "MCP Watchtower Contributors" }]
keywords = ["mcp", "agents", "observability", "sqlite", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/AnantBisht07/watchTower"
Documentation = "https://github.com/AnantBisht07/watchTower/tree/main/docs"
Issues = "https://github.com/AnantBisht07/watchTower/issues"

[project.optional-dependencies]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]
mcp = [
  "mcp>=1.0",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  "httpx>=0.27",
]

[project.scripts]
mcp-watchtower = "mcp_watchtower.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_watchtower*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["examples/", "scripts/", "real-test/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["mcp_watchtower"]
omit = ["mcp_watchtower/fake_runner.py"]

[tool.coverage.report]
fail_under = 70
